// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostPage Snapshots with a color passed in matches snapshot 1`] = `
<div>
  <header
    class="ContentHeader ContentHeader--blue"
  >
    <div
      class="ContentHeader-text"
    >
      <h1>
        blog post 1 title
      </h1>
       
      <h5>
        Apr 18 2018
      </h5>
    </div>
  </header>
   
  <!---->
</div>
`;

exports[`BlogPostPage Snapshots without a color passed in matches snapshot 1`] = `
<div>
  <header
    class="ContentHeader ContentHeader--gray"
  >
    <div
      class="ContentHeader-text"
    >
      <h1>
        blog post 1 title
      </h1>
       
      <h5>
        Apr 18 2018
      </h5>
    </div>
  </header>
   
  <!---->
</div>
`;
